[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/ui/CharacterInfoModal.gd" type="Script" id=3]
[ext_resource path="res://overlay_theme.tres" type="Theme" id=4]

[node name="CharacterInfoModal" type="PanelContainer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -571.0
margin_bottom = 34.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 569.0
margin_bottom = 32.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 562.0
margin_bottom = 25.0
theme = ExtResource( 4 )

[node name="HeaderMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 557.0
margin_bottom = 59.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HeaderMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 547.0
margin_bottom = 49.0
theme = ExtResource( 4 )

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/HeaderMargin/HBoxContainer"]
margin_right = 87.0
margin_bottom = 19.0
theme = ExtResource( 4 )
text = "The Title"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 557.0
margin_bottom = 4.0

[node name="ListMargin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 557.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ListMargin"]
margin_left = 10.0
margin_top = 10.0
margin_right = 547.0
margin_bottom = 10.0
custom_constants/separation = 5
alignment = 1
